fix button spacing

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -117,7 +117,7 @@ input:disabled {
 }
 
 .nav-btn .subtitle {
-  @apply font-normal text-xs pt-2 text-gray-500 block;
+  @apply font-normal text-xs pt-2 text-gray-500 block mx-4;
 }
 
 .dropdown {
